--- a/assets/styles/scss/_typography.scss
+++ b/assets/styles/scss/_typography.scss
@@ -30,3 +30,11 @@ p,
 		line-height: rem-calc(38);
 	}
 }
+
+.font-heading {
+	font-family: $font-heading;
+}
+
+.font-body {
+	font-family: $font-body;
+}
