--- a/assets/styles/scss/_variables.scss
+++ b/assets/styles/scss/_variables.scss
@@ -2,8 +2,11 @@
 $text-black: #3B3A3A;
 $brand-purple: #3D1E65;
 $brand-amethyst: #9063CD;
-$brand-lime-green: #84BD00;
+$brand-fuchsia : #E31C79;
+$brand-green: #84BD00;
+$brand-aqua: #00AEC7;
 $brand-orange: #EA891B;
+$brand-yellow: #FFC600;
 
 // Typography
 $font-heading: garage-gothic, sans-serif;
