--- a/assets/styles/scss/_typography.scss
+++ b/assets/styles/scss/_typography.scss
@@ -2,6 +2,18 @@ h1,
 .h1 {
 	line-height: 1.27;
 }
+
+	h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6,
+h7,
+.h7 {
+	font-family: $font-body;
+}
+
 // h1,
 // .h1,
 // h2,
