--- a/assets/styles/scss/_global.scss
+++ b/assets/styles/scss/_global.scss
@@ -65,6 +65,10 @@ BACKGROUNDS
 	color: $brand-amethyst;
 }
 
+.color-purple {
+	color: $brand-purple;
+}
+
 /*********************
 RE-USED ELEMENTS
 *********************/
