--- a/assets/styles/scss/_settings.scss
+++ b/assets/styles/scss/_settings.scss
@@ -148,6 +148,8 @@ $header-styles: (
     'h5': ('font-size': 17),
     'h6': ('font-size': 16),
     'h7': ('font-size': 16),
+    'h8': ('font-size': 16),
+    'h9': ('font-size': 16),
   ),
   medium: (
     'h1': ('font-size': 144),
@@ -157,6 +159,8 @@ $header-styles: (
     'h5': ('font-size': 29),
     'h6': ('font-size': 22),
     'h7': ('font-size': 22),
+    'h8': ('font-size': 19),
+    'h9': ('font-size': 19),
   ),
   large: (
     'h1': ('font-size': 144),
@@ -166,6 +170,8 @@ $header-styles: (
     'h5': ('font-size': 29),
     'h6': ('font-size': 22),
     'h7': ('font-size': 22),
+    'h8': ('font-size': 19),
+    'h9': ('font-size': 19),
   ),
 );
 $header-text-rendering: optimizeLegibility;
