--- a/assets/styles/scss/_global.scss
+++ b/assets/styles/scss/_global.scss
@@ -57,16 +57,40 @@ BACKGROUNDS
 	background-color: $brand-yellow;
 }
 
-.color-aqua {
-	color: $brand-aqua;
+.white-bg {
+	background-color: $white;
+}
+
+.color-green {
+	color: $brand-green;
 }
 
 .color-amethyst {
 	color: $brand-amethyst;
 }
 
+.color-orange {
+	color: $brand-orange;
+}
+
+.color-aqua {
+	color: $brand-aqua;
+}
+
+.color-fuchsia {
+	color: $brand-fuchsia;
+}
+
+.color-yellow {
+	color: $brand-yellow;
+}
+
 .color-purple {
 	color: $brand-purple;
+}
+
+.color-white {
+	color: $white;	
 }
 
 /*********************
