--- a/assets/styles/sass/_variables.scss
+++ b/assets/styles/sass/_variables.scss
@@ -4,6 +4,7 @@ $brand-purple: #3D1E65;
 $brand-amethyst: #9063CD;
 $brand-fuchsia : #E31C79;
 $brand-green: #84BD00;
+$brand-dark-green: #689500;
 $brand-aqua: #00AEC7;
 $brand-orange: #EA891B;
 $brand-yellow: #FFC600;
