--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -92,3 +92,5 @@ CSS file.
 @import "archives";
 
 @import "_modules/open-play-areas";
+@import "_modules/gallery-slider";
+@import "_modules/list-gallery-slider-list";
