--- a/assets/styles/sass/_variables.scss
+++ b/assets/styles/sass/_variables.scss
@@ -2,11 +2,15 @@
 $text-black: #3B3A3A;
 $brand-purple: #3D1E65;
 $brand-amethyst: #9063CD;
-$brand-fuchsia : #E31C79;
+$brand-dark-amethyst: #604288;
+$brand-fuchsia: #E31C79;
+$brand-dark-fuchsia: #B11A60;
 $brand-green: #84BD00;
 $brand-dark-green: #689500;
 $brand-aqua: #00AEC7;
+$brand-dark-aqua: #018496;
 $brand-orange: #EA891B;
+$brand-dark-orange: #C97516;
 $brand-yellow: #FFC600;
 
 // Typography
