--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -91,6 +91,11 @@ CSS file.
 @import "footer";
 @import "archives";
 
+@import "_parts/buttons";
+
 @import "_modules/open-play-areas";
 @import "_modules/gallery-slider";
 @import "_modules/list-gallery-slider-list";
+@import "_modules/text-circle-image-and-text";
+@import "_modules/hours";
+@import "_modules/cta-bubble";
