--- a/assets/styles/sass/_typography.scss
+++ b/assets/styles/sass/_typography.scss
@@ -3,6 +3,15 @@ h1,
 	line-height: 1.27;
 }
 
+h1,
+.h1,
+h2,
+.h2
+h3,
+.h3 {
+	text-transform: uppercase;
+}
+
 h4,
 .h4,
 h5,
@@ -56,6 +65,7 @@ h6,
 h5,
 .h5 {
 	line-height: 1;
+	margin-bottom: 0.65em;
 	@include breakpoint (medium) {
 		line-height: 1.1379;
 	}
