--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -99,3 +99,5 @@ CSS file.
 @import "_modules/text-circle-image-and-text";
 @import "_modules/hours";
 @import "_modules/cta-bubble";
+@import "_modules/pricing";
+@import "_modules/list-circle-links";
