--- a/assets/styles/sass/_mixins.scss
+++ b/assets/styles/sass/_mixins.scss
@@ -8,3 +8,7 @@
 	background-repeat: no-repeat;
 	transform: rotate(180deg);
 }
+
+@mixin button-shadow {
+	box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
+}
