--- a/assets/styles/sass/_modules/_cta-bubble.scss
+++ b/assets/styles/sass/_modules/_cta-bubble.scss
@@ -3,9 +3,10 @@
 		margin: 0;
 	}
 	.inner {
-		padding: 1rem;
+		border-radius: 85px;
 		>.grid-x {
 			min-height: 128px;
+			padding: 1rem 4.6rem;
 		}
 	}
 }
